--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@tailwindcss/vite": "^4.1.13",
+		"sharp": "^0.34.4",
 		"svelte": "^5.39.5",
+		"svgo": "^4.0.0",
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7"
@@ -22,6 +24,9 @@
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
+		],
+		"ignoredBuiltDependencies": [
+			"sharp"
 		]
 	}
 }
